# focus_groups

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  STAGES_TO_POC.md  STAGE_0_1_WALKTHROUGH.md  STAGE_2_WALKTHROUGH.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-ml.txt  requirements.txt  wtp_analysis.py
.claude/: CLAUDE.md  settings.json
config/: subreddits.json
db/: init.sql  migrate.sh
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
my-video/: package-lock.json  package.json
personas/: __init__.py  diversity.py  profiles.py  selection.py
plans/: 01_render_deploy.md  02_frontend_docker.md  code_quality_plan.md  cors_plan.md  db_indexes_plan.md  error_sanitization_plan.md  export_security_plan.md  input_validation_plan.md  missing_tests_plan.md  prompt.txt  scraper_tests_plan.md  security_regression_tests_plan.md
scripts/: check_db.py  check_deps.py  db_summary.py  export_csv.py  generate_embeddings.py  load_jsonl.py  migrate_tags_unique_index.py  persona_report.py  propagate_author_tags.py  quality_report.py  run_stage1.sh  start_api.sh  tag_existing.py
src/: api.py  claude.py  cli_runner.py  database.py  db.py  demographics.py  embeddings.py  persona.py  pipeline.py  quality_report.py  scraper.py  sessions.py  tagger.py
testers/: test_database.py  test_demographics.py
tests/: conftest.py  test_api.py  test_api_cors.py  test_api_error_sanitization.py  test_api_export.py  test_api_mutations.py  test_auth.py  test_db.py  (+44 more)
(+133 files in other folders)
